--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-25  Neil Booth  <neil@daikokuya.co.uk>
+
+	* c-decl.c (c_decode_option): No need to handle switches
+	cpplib handles.
+
 2002-07-24  Zack Weinberg  <zack@codesourcery.com>
 
 	* defaults.h (ASM_OUTPUT_TYPE_DIRECTIVE, ASM_OUTPUT_SIZE_DIRECTIVE,
