* c-common.c (c_sizeof_or_alignof_type): Take a third argument for 	complaining. 	* c-common.h (c_sizeof): Adjust definition. 	(c_alignof): Likewise. 	* c-tree.h (c_sizeof_nowarn): Now macro. 	* c-typeck.c (c_sizeof_nowarn): Remove definition. cp/ 	* cp-tree.h (cxx_sizeof_nowarn): Now a macro. 	(cxx_sizeof_or_alignof_type): Take a third argument. 	(cxx_sizeof): Adjust definition. 	(cxx_alignof): Likewise. 	* init.c (build_delete): Use cxx_sizeof_nowarn to reflect reality. 	* typeck.c (cxx_sizeof_or_alignof_type): Take a third argument for 	complaining. 	(c_sizeof_nowarn): Remove definition. 	(build_unary_op): Use cxx_sizeof_nowarn.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55744 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2002-07-25  Gabriel Dos Reis  <gdr@nerim.net>
+
+	* c-common.c (c_sizeof_or_alignof_type): Take a third argument for
+	complaining. 
+	* c-common.h (c_sizeof): Adjust definition.
+	(c_alignof): Likewise.
+	* c-tree.h (c_sizeof_nowarn): Now macro.
+	* c-typeck.c (c_sizeof_nowarn): Remove definition.
+
 2002-07-25  Neil Booth  <neil@daikokuya.co.uk>
 
 	* c-decl.c (c_decode_option): No need to handle switches
