--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Thu Jul 25 10:23:41 2002  J"orn Rennecke <joern.rennecke@superh.com>
+
+	* simpify-rtx.c (simplify_subreg): Don't pass MODE_CC mode to
+	int_mode_for_mode.
+
 2002-07-25  Gabriel Dos Reis  <gdr@nerim.net>
 
 	* c-common.c (c_sizeof_or_alignof_type): Take a third argument for
