--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-25  Richard Sandiford  <rsandifo@redhat.com>
+
+	* gcc.dg/mips-args-[123].c: New tests.
+
 2002-07-24  Aldy Hernandez  <aldyh@redhat.com>
 
 	* gcc.dg/ppc-spe.c: New.
