--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-25  Richard Henderson  <rth@redhat.com>
+
+	* emit-rtl.c (set_mem_attributes): Fix size and alignment thinkos
+	in ARRAY_REF of DECL_P case.
+
 2002-07-25  Richard Sandiford  <rsandifo@redhat.com>
 
 	* doc/invoke.texi: Document -mabi=meabi, and expand on the EABI
