--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Thu Jul 25 18:57:50 2002  J"orn Rennecke <joern.rennecke@superh.com>
+
+	* rtl.h (mem_attrs): Spell out more clearly the roles of ALIGN,
+	SIZE, EXPR and OFFSET.
+
 2002-07-25  Richard Henderson  <rth@redhat.com>
 
 	* emit-rtl.c (set_mem_attributes): Fix size and alignment thinkos
