--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2002-07-25  Neil Booth  <neil@daikokuya.co.uk>
 
+	* gcse.c (obstack_chunk_alloc): Remove.
+	(gcse_alloc): Fix to count allocated bytes.
+	* collect2.c (SYMBOL__MAIN): Remove.
+
+2002-07-25  Neil Booth  <neil@daikokuya.co.uk>
+
 	* gcc.c (TARGET_EXECUTABLE_SUFFIX): Only used if
 	HAVE_TARGET_EXECUTABLE_SUFFIX.
 
