cp: 	* error.c (print_whitespace): Remove. 	* g++spec.c (LIBUNWIND): Move. 	* mangle.c (mangled_position, write_signed_number): Remove.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55760 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,11 @@
 2002-07-25  Neil Booth  <neil@daikokuya.co.uk>
 
+	* error.c (print_whitespace): Remove.
+	* g++spec.c (LIBUNWIND): Move.
+	* mangle.c (mangled_position, write_signed_number): Remove.
+
+2002-07-25  Neil Booth  <neil@daikokuya.co.uk>
+
 	* decl2.c (cxx_decode_option): Similarly.
 
 2002-07-25  Gabriel Dos Reis  <gdr@nerim.net>
