* objc/objc-act.c (UTAG_STATICS, UTAG_PROTOCOL_LIST, USERTYPE): 	Remove.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55761 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-25  Neil Booth  <neil@daikokuya.co.uk>
+
+	* objc/objc-act.c (UTAG_STATICS, UTAG_PROTOCOL_LIST, USERTYPE):
+	Remove.
+
 2002-07-25  Stan Shebs  <shebs@apple.com>
 
 	* config/rs6000/rs6000.c (rs6000_emit_prologue): Remove unused
