--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-25  Release Manager
+
+	* GCC 3.1.1 Released.
+
 2002-07-22  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* gennews (files): Add proper files for the GCC 3.1 release series.
