--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-25  Release Manager
+
+	* GCC 3.1.1 Released.
+
 2002-07-15  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/compile/20020710-1.c: New test.
