* config/rs6000/rs6000.md: Enable patterns using rlwinm for 	PowerPC64.  Replace "T" and "S" constraints with "n" when the 	predicate will do.  Formatting fixes. 	(extzvsi_internal2): Use "andi.", "andis." and attr type of "compare" 	as for extzvsi_internal1.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55770 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-07-26  Alan Modra  <amodra@bigpond.net.au>
+
+	* config/rs6000/rs6000.md: Enable patterns using rlwinm for
+	PowerPC64.  Replace "T" and "S" constraints with "n" when the
+	predicate will do.  Formatting fixes.
+	(extzvsi_internal2): Use "andi.", "andis." and attr type of "compare"
+	as for extzvsi_internal1.
+
 2002-07-25  Neil Booth  <neil@daikokuya.co.uk>
 
 	* dwarfout.c (VERSION_ASM_OP, DERIV_BEGIN_LABEL_FMT,
