* c-common.h (RID_AND, RID_AND_EQ, RID_NOT, RID_NOT_EQ, 	RID_OR, RID_OR_EQ, RID_XOR, RID_XOR_EQ, RID_BITAND, RID_BITOR, 	RID_COMPL): Remove. 	* c-parse.in (rid_to_yy): Similarly. cp: 	* cp-tree.h (flag_operator_names): Remove. 	* decl2.c (flag_operator_names): Remove. 	(lang_f_options): Remove operator-names. 	* lex.c (D_OPNAME): Remove. 	(reswords): Remove operator names. 	(rid_to_yy): Remove operator names. 	(init_reswords): No need to handle D_OPNAME. 	* spew.c (read_process_identifier): There are no operator 	names.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55777 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-07-26  Neil Booth  <neil@daikokuya.co.uk>
+
+	* c-common.h (RID_AND, RID_AND_EQ, RID_NOT, RID_NOT_EQ,
+	RID_OR, RID_OR_EQ, RID_XOR, RID_XOR_EQ, RID_BITAND, RID_BITOR,
+	RID_COMPL): Remove.
+	* c-parse.in (rid_to_yy): Similarly.
+
 2002-07-26  Jason Merrill  <jason@redhat.com>
 
 	* c-dump.c: Resurrect.
