* cppmacro.c (_cpp_create_definition): Don't attempt redefinition 	warnings on assertions.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55778 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-07-26  Neil Booth  <neil@daikokuya.co.uk>
 
+	* cppmacro.c (_cpp_create_definition): Don't attempt redefinition
+	warnings on assertions.
+
+2002-07-26  Neil Booth  <neil@daikokuya.co.uk>
+
 	* c-common.h (RID_AND, RID_AND_EQ, RID_NOT, RID_NOT_EQ,
 	RID_OR, RID_OR_EQ, RID_XOR, RID_XOR_EQ, RID_BITAND, RID_BITOR,
 	RID_COMPL): Remove.
