* java/io/natFileDescriptorPosix.cc: Don't include sys/socket.h or 	fcntl.h.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55780 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-26  Tom Tromey  <tromey@redhat.com>
+
+	* java/io/natFileDescriptorPosix.cc: Don't include sys/socket.h or
+	fcntl.h.
+
 2002-07-24  Tom Tromey  <tromey@redhat.com>
 
 	* java/lang/Runtime.java (loadLibrary): Pass `true' as search
