--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-26  Tom Tromey  <tromey@redhat.com>
+
+	* java/net/Authenticator.java: New version from Classpath.
+	* java/net/DatagramSocketImpl.java: New version from Classpath.
+
 2002-07-27  Alan Modra  <amodra@bigpond.net.au>
 
 	* configure.host: Add powerpc64*-* entry.
