* pa.md (extv): Check predicates before emitting extv_32.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55790 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jul 26 23:00:13 2002  J"orn Rennecke <joern.rennecke@superh.com>
+
+	* pa.md (extv): Check predicates before emitting extv_32.
+
 2002-07-27  Alan Modra  <amodra@bigpond.net.au>
 
 	* config/rs6000/rs6000.c (rs6000_traceback_name): New var.
