--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-07-25  Aldy Hernandez  <aldyh@redhat.com>
+
+	* config/rs6000/rs6000.c (function_arg_advance): SPE vararg
+	vectors are split into two registers.
+	(function_arg): Same.
+
 Thu Jul 26 23:00:13 2002  J"orn Rennecke <joern.rennecke@superh.com>
 
 	* pa.md (extv): Check predicates before emitting extv_32.
