* cp/decl2.c (cxx_decode_option): Support -fno-builtin-foo.
	* doc/invoke.texi: Document that both -fno-builtin-foo and
	-fno-builtin are supported by the g++ front-end.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55802 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-27  Roger Sayle  <roger@eyesopen.com>
+
+	* doc/invoke.texi: Document that both -fno-builtin-foo and
+	-fno-builtin are supported by the g++ front-end.
+
 2002-07-27  Stan Shebs  <shebs@apple.com>
 
 	* configure.in: Rename config_gtfiles to target_gtfiles.
