--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-27  Roger Sayle  <roger@eyesopen.com>
+
+	* decl2.c (cxx_decode_option): Support -fno-builtin-foo.
+
 2002-07-26  Jason Merrill  <jason@redhat.com>
 
 	* call.c (build_over_call): Likewise.
