* Makefile.in (gengtype-lex.c): Work around a bug in flex. 	* gengtype-lex.l (YY_USE_PROTOS): Undef. 	(YY_DECL): Define.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55803 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-07-27  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* Makefile.in (gengtype-lex.c): Work around a bug in flex.
+	* gengtype-lex.l (YY_USE_PROTOS): Undef.
+	(YY_DECL): Define.
+
 2002-07-27  Roger Sayle  <roger@eyesopen.com>
 
 	* doc/invoke.texi: Document that both -fno-builtin-foo and
